--- a/demo4/createElement.html
+++ b/demo4/createElement.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello React!</title>
+    <title>使用JSX定义React组件－定义一个组件!</title>
     <script src="../build/react.js"></script>
     <script src="../build/react-dom.js"></script>
     <script src="../build/browser.min.js"></script>
@@ -11,7 +11,10 @@
     <div id="example"></div>
     <script type="text/babel">
       ReactDOM.render(
-        <h1>Hello, world!</h1>,
+        React.createElement('div', {className:'myClass'},  
+          React.createElement('h2', null, 'itbilu.com'),
+          React.createElement('hr')
+        ),
         document.getElementById('example')
       );
     </script>
