--- a/demo4/cloneElement.html
+++ b/demo4/cloneElement.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>React 相关方法（API）介绍-createElement()</title>
+    <title>React 相关方法（API）介绍-cloneElement()</title>
     <script src="../build/react.js"></script>
     <script src="../build/react-dom.js"></script>
     <script src="../build/browser.min.js"></script>
@@ -10,8 +10,10 @@
   <body>
     <div id="example"></div>
     <script type="text/babel">
+      var div = React.createElement('div')
+
       ReactDOM.render(
-        React.createElement('div', {className:'myClass'},  
+        React.cloneElement(div, {className:'myClass'},  
           React.createElement('h2', null, 'itbilu.com'),
           React.createElement('hr')
         ),
