--- a/demo4/createClass.html
+++ b/demo4/createClass.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>React 相关方法（API）介绍-createElement()</title>
+    <title>React 相关方法（API）介绍-createClass()</title>
     <script src="../build/react.js"></script>
     <script src="../build/react-dom.js"></script>
     <script src="../build/browser.min.js"></script>
@@ -10,11 +10,17 @@
   <body>
     <div id="example"></div>
     <script type="text/babel">
+      var App = React.createClass({displayName: 'App',
+        render: function () {
+          return (React.createElement('div', {className:'myClass'},  
+            React.createElement('h2', null, this.props.children),
+            React.createElement('hr')
+          ));
+        }
+      });
+
       ReactDOM.render(
-        React.createElement('div', {className:'myClass'},  
-          React.createElement('h2', null, 'itbilu.com'),
-          React.createElement('hr')
-        ),
+        <App>itbilu.com</App>,
         document.getElementById('example')
       );
     </script>
